--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script type="text/javascript" src="script.js"></script>
 
-	<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Indie+Flower|Shadows+Into+Light" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Gloria+Hallelujah|Indie+Flower|Shadows+Into+Light|Damion|Courgette|Gochi+Hand" rel="stylesheet">
 
 
 	<title>Flipp copycat</title>
@@ -40,7 +40,7 @@
 					</a>
 
 				</li>
-				<li class="sideBarContent"> <a href="#anch2" id="store-button" data-scroll="" class="">
+				<li class="sideBarContent"> <a href="#storePage" id="store-button" data-scroll="" class="">
 					<span class="fa fa-anchor solo" id="sideBarText">Store</span>
 				</a>
 
@@ -62,8 +62,8 @@
 <!-- Page content -->
 <div id="page-content-wrapper" class="">
 	<div class="page-content">	
-	<!-- Home Page -->
-	<div class="col-md-12 well" id="homePage">
+		<!-- Home Page -->
+		<div class="col-md-12 well" id="homePage">
 			<h1 id="homePageTitle" class="">Home</h1>
 			<p class="" id="homePageContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ultricies,
 				metus eget fringilla fermentum, sem justo pulvinar tellus, ac varius neque
@@ -80,59 +80,32 @@
 				tortor rutrum, rutrum mauris sit amet, hendrerit augue. Sed ut tincidunt
 				nisi. Nam consectetur velit ac pharetra venenatis.</p>
 			</div>
-		<!-- About Page -->
-		<div class="col-md-12 well" id="aboutPage">
-			<h1 id="aboutTitle" class="">About</h1>
-			<div id="aboutColumns">
-				<p class="aboutContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ultricies,
-				metus eget fringilla fermentum, sem justo pulvinar tellus, ac varius neque
-				ante eget mi. Donec cursus nibh ultrices vulputate aliquet. Morbi nulla
-				enim, molestie eu ullamcorper quis, placerat a mauris. Proin vel magna
-				ullamcorper, vulputate leo eu, egestas odio. Vivamus erat leo, egestas
-				in euismod sed, fermentum nec magna.Nunc nisi enim, euismod a tellus sit
-				amet, fermentum adipiscing ipsum. Fusce rhoncus diam ac neque aliquam convallis.
-				Etiam malesuada, nibh id rutrum euismod, enim augue gravida dolor, at vulputate
-				felis mi at magna. </p>
-				<p class="aboutContent">Nulla luctus, libero eget luctus gravida, sapien enim
-				varius massa, adipiscing aliquet lacus mi eu eros. Duis pretium laoreet
-				ullamcorper. Aenean in mauris nec libero tincidunt pharetra non et dui.
-				Sed tortor turpis, mollis et tempus eu, auctor laoreet neque. Etiam eu
-				tortor rutrum, rutrum mauris sit amet, hendrerit augue. Sed ut tincidunt
-				nisi. Nam consectetur velit ac pharetra venenatis.</p>
-			</div>
-			</div>
-			<!-- Store Page -->
-			<div class="col-md-12 well" id="text2">
-				<h1 id="anch2" class="">Store</h1>
-				<p class="" id="textContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ultricies,
-					metus eget fringilla fermentum, sem justo pulvinar tellus, ac varius neque
-					ante eget mi. Donec cursus nibh ultrices vulputate aliquet. Morbi nulla
-					enim, molestie eu ullamcorper quis, placerat a mauris. Proin vel magna
-					ullamcorper, vulputate leo eu, egestas odio. Vivamus erat leo, egestas
-					in euismod sed, fermentum nec magna. Nunc nisi enim, euismod a tellus sit
-					amet, fermentum adipiscing ipsum. Fusce rhoncus diam ac neque aliquam convallis.
-					Etiam malesuada, nibh id rutrum euismod, enim augue gravida dolor, at vulputate
-					felis mi at magna. Nulla luctus, libero eget luctus gravida, sapien enim
-					varius massa, adipiscing aliquet lacus mi eu eros. Duis pretium laoreet
-					ullamcorper. Aenean in mauris nec libero tincidunt pharetra non et dui.
-					Sed tortor turpis, mollis et tempus eu, auctor laoreet neque. Etiam eu
-					tortor rutrum, rutrum mauris sit amet, hendrerit augue. Sed ut tincidunt
-					nisi. Nam consectetur velit ac pharetra venenatis.</p>
-					<p class="" id="textContent">Donec pellentesque id quam vel iaculis. Phasellus commodo tempor metus,
-						eget sollicitudin odio ultricies id. Proin sed ipsum quis turpis suscipit
-						luctus vitae id urna. Fusce et rhoncus quam. Etiam vel justo ligula. Nullam
-						euismod lacinia risus a pulvinar. Pellentesque sit amet nisl eget ante
-						vulputate feugiat. Suspendisse venenatis magna nunc, mollis facilisis neque
-						condimentum ac. Vivamus non semper dui. Aenean sed eleifend dui. Vivamus
-						a massa aliquam nibh consectetur luctus id at ligula. Nunc ipsum dolor,
-						mollis at sem et, auctor rhoncus ipsum. Nulla faucibus venenatis est sit
-						amet facilisis. In vestibulum nisi at tellus egestas, in pharetra enim
-						fringilla. In ac erat non magna accumsan aliquam.</p>
+			<!-- About Page -->
+			<div class="col-md-12 well" id="aboutPage">
+				<h1 id="aboutTitle" class="">About</h1>
+				<div id="aboutColumns">
+					<p class="aboutContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ultricies,
+						metus eget fringilla fermentum, sem justo pulvinar tellus, ac varius neque
+						ante eget mi. Donec cursus nibh ultrices vulputate aliquet. Morbi nulla
+						enim, molestie eu ullamcorper quis, placerat a mauris. Proin vel magna
+						ullamcorper, vulputate leo eu, egestas odio. Vivamus erat leo, egestas
+						in euismod sed, fermentum nec magna.Nunc nisi enim, euismod a tellus sit
+						amet, fermentum adipiscing ipsum. Fusce rhoncus diam ac neque aliquam convallis.
+						Etiam malesuada, nibh id rutrum euismod, enim augue gravida dolor, at vulputate
+						felis mi at magna. </p>
+						<p class="aboutContent">Nulla luctus, libero eget luctus gravida, sapien enim
+							varius massa, adipiscing aliquet lacus mi eu eros. Duis pretium laoreet
+							ullamcorper. Aenean in mauris nec libero tincidunt pharetra non et dui.
+							Sed tortor turpis, mollis et tempus eu, auctor laoreet neque. Etiam eu
+							tortor rutrum, rutrum mauris sit amet, hendrerit augue. Sed ut tincidunt
+							nisi. Nam consectetur velit ac pharetra venenatis.</p>
+						</div>
 					</div>
-					<!-- Contact Page -->
-					<div class="col-md-12 well" id="text3">
-						<h1 id="anch3" class="">Contact</h1>
-						<p class="" id="textContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ultricies,
+					<!-- Store Page -->
+					<div class="col-md-12 well" id="storePage">
+						<h1 id="storeTitle" class="">Store</h1>
+						<div id="storeColumns">
+						<p class="storeContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ultricies,
 							metus eget fringilla fermentum, sem justo pulvinar tellus, ac varius neque
 							ante eget mi. Donec cursus nibh ultrices vulputate aliquet. Morbi nulla
 							enim, molestie eu ullamcorper quis, placerat a mauris. Proin vel magna
@@ -143,51 +116,71 @@
 							felis mi at magna. Nulla luctus, libero eget luctus gravida, sapien enim
 							varius massa, adipiscing aliquet lacus mi eu eros. Duis pretium laoreet
 							ullamcorper. Aenean in mauris nec libero tincidunt pharetra non et dui.
-							Sed tortor turpis, mollis et tempus eu, auctor laoreet neque. Etiam eu
-							tortor rutrum, rutrum mauris sit amet, hendrerit augue. Sed ut tincidunt
-							nisi. Nam consectetur velit ac pharetra venenatis.</p>
-							<p class="" id="textContent">Donec pellentesque id quam vel iaculis. Phasellus commodo tempor metus,
-								eget sollicitudin odio ultricies id. Proin sed ipsum quis turpis suscipit
-								luctus vitae id urna. Fusce et rhoncus quam. Etiam vel justo ligula. Nullam
-								euismod lacinia risus a pulvinar. Pellentesque sit amet nisl eget ante
-								vulputate feugiat. Suspendisse venenatis magna nunc, mollis facilisis neque
-								condimentum ac. Vivamus non semper dui. Aenean sed eleifend dui. Vivamus
-								a massa aliquam nibh consectetur luctus id at ligula. Nunc ipsum dolor,
-								mollis at sem et, auctor rhoncus ipsum. Nulla faucibus venenatis est sit
-								amet facilisis. In vestibulum nisi at tellus egestas, in pharetra enim
-								fringilla. In ac erat non magna accumsan aliquam.</p>
-							</div>
-							<!-- Links Page -->
-							<div class="col-md-12 well" id="text4">
-								<h1 id="anch4" class="">Links</h1>
-								<p class="" id="textContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ultricies,
-									metus eget fringilla fermentum, sem justo pulvinar tellus, ac varius neque
-									ante eget mi. Donec cursus nibh ultrices vulputate aliquet. Morbi nulla
-									enim, molestie eu ullamcorper quis, placerat a mauris. Proin vel magna
-									ullamcorper, vulputate leo eu, egestas odio. Vivamus erat leo, egestas
-									in euismod sed, fermentum nec magna. Nunc nisi enim, euismod a tellus sit
-									amet, fermentum adipiscing ipsum. Fusce rhoncus diam ac neque aliquam convallis.
-									Etiam malesuada, nibh id rutrum euismod, enim augue gravida dolor, at vulputate
-									felis mi at magna. Nulla luctus, libero eget luctus gravida, sapien enim
-									varius massa, adipiscing aliquet lacus mi eu eros. Duis pretium laoreet
-									ullamcorper. Aenean in mauris nec libero tincidunt pharetra non et dui.
-									Sed tortor turpis, mollis et tempus eu, auctor laoreet neque. Etiam eu
-									tortor rutrum, rutrum mauris sit amet, hendrerit augue. Sed ut tincidunt
-									nisi. Nam consectetur velit ac pharetra venenatis.</p>
-									<p class="" id="textContent">Donec pellentesque id quam vel iaculis. Phasellus commodo tempor metus,
-										eget sollicitudin odio ultricies id. Proin sed ipsum quis turpis suscipit
-										luctus vitae id urna. Fusce et rhoncus quam. Etiam vel justo ligula. Nullam
-										euismod lacinia risus a pulvinar. Pellentesque sit amet nisl eget ante
-										vulputate feugiat. Suspendisse venenatis magna nunc, mollis facilisis neque
-										condimentum ac. Vivamus non semper dui. Aenean sed eleifend dui. Vivamus
-										a massa aliquam nibh consectetur luctus id at ligula. Nunc ipsum dolor,
-										mollis at sem et, auctor rhoncus ipsum. Nulla faucibus venenatis est sit
-										amet facilisis. In vestibulum nisi at tellus egestas, in pharetra enim
-										fringilla. In ac erat non magna accumsan aliquam.</p>
+							Sed tortor turpis, mollis et tempus eu, auctor laoreet neque.</p>
+							<p class="storeContent"> 
+								<img src="storeimg1.jpg" style="width:400px;height:350px;">
+							</p>
+						</div>
+						</div>
+						<!-- Contact Page -->
+						<div class="col-md-12 well" id="text3">
+							<h1 id="anch3" class="">Contact</h1>
+							<p class="" id="textContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ultricies,
+								metus eget fringilla fermentum, sem justo pulvinar tellus, ac varius neque
+								ante eget mi. Donec cursus nibh ultrices vulputate aliquet. Morbi nulla
+								enim, molestie eu ullamcorper quis, placerat a mauris. Proin vel magna
+								ullamcorper, vulputate leo eu, egestas odio. Vivamus erat leo, egestas
+								in euismod sed, fermentum nec magna. Nunc nisi enim, euismod a tellus sit
+								amet, fermentum adipiscing ipsum. Fusce rhoncus diam ac neque aliquam convallis.
+								Etiam malesuada, nibh id rutrum euismod, enim augue gravida dolor, at vulputate
+								felis mi at magna. Nulla luctus, libero eget luctus gravida, sapien enim
+								varius massa, adipiscing aliquet lacus mi eu eros. Duis pretium laoreet
+								ullamcorper. Aenean in mauris nec libero tincidunt pharetra non et dui.
+								Sed tortor turpis, mollis et tempus eu, auctor laoreet neque. Etiam eu
+								tortor rutrum, rutrum mauris sit amet, hendrerit augue. Sed ut tincidunt
+								nisi. Nam consectetur velit ac pharetra venenatis.</p>
+								<p class="" id="textContent">Donec pellentesque id quam vel iaculis. Phasellus commodo tempor metus,
+									eget sollicitudin odio ultricies id. Proin sed ipsum quis turpis suscipit
+									luctus vitae id urna. Fusce et rhoncus quam. Etiam vel justo ligula. Nullam
+									euismod lacinia risus a pulvinar. Pellentesque sit amet nisl eget ante
+									vulputate feugiat. Suspendisse venenatis magna nunc, mollis facilisis neque
+									condimentum ac. Vivamus non semper dui. Aenean sed eleifend dui. Vivamus
+									a massa aliquam nibh consectetur luctus id at ligula. Nunc ipsum dolor,
+									mollis at sem et, auctor rhoncus ipsum. Nulla faucibus venenatis est sit
+									amet facilisis. In vestibulum nisi at tellus egestas, in pharetra enim
+									fringilla. In ac erat non magna accumsan aliquam.</p>
+								</div>
+								<!-- Links Page -->
+								<div class="col-md-12 well" id="text4">
+									<h1 id="anch4" class="">Links</h1>
+									<p class="" id="textContent">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus ultricies,
+										metus eget fringilla fermentum, sem justo pulvinar tellus, ac varius neque
+										ante eget mi. Donec cursus nibh ultrices vulputate aliquet. Morbi nulla
+										enim, molestie eu ullamcorper quis, placerat a mauris. Proin vel magna
+										ullamcorper, vulputate leo eu, egestas odio. Vivamus erat leo, egestas
+										in euismod sed, fermentum nec magna. Nunc nisi enim, euismod a tellus sit
+										amet, fermentum adipiscing ipsum. Fusce rhoncus diam ac neque aliquam convallis.
+										Etiam malesuada, nibh id rutrum euismod, enim augue gravida dolor, at vulputate
+										felis mi at magna. Nulla luctus, libero eget luctus gravida, sapien enim
+										varius massa, adipiscing aliquet lacus mi eu eros. Duis pretium laoreet
+										ullamcorper. Aenean in mauris nec libero tincidunt pharetra non et dui.
+										Sed tortor turpis, mollis et tempus eu, auctor laoreet neque. Etiam eu
+										tortor rutrum, rutrum mauris sit amet, hendrerit augue. Sed ut tincidunt
+										nisi. Nam consectetur velit ac pharetra venenatis.</p>
+										<p class="" id="textContent">Donec pellentesque id quam vel iaculis. Phasellus commodo tempor metus,
+											eget sollicitudin odio ultricies id. Proin sed ipsum quis turpis suscipit
+											luctus vitae id urna. Fusce et rhoncus quam. Etiam vel justo ligula. Nullam
+											euismod lacinia risus a pulvinar. Pellentesque sit amet nisl eget ante
+											vulputate feugiat. Suspendisse venenatis magna nunc, mollis facilisis neque
+											condimentum ac. Vivamus non semper dui. Aenean sed eleifend dui. Vivamus
+											a massa aliquam nibh consectetur luctus id at ligula. Nunc ipsum dolor,
+											mollis at sem et, auctor rhoncus ipsum. Nulla faucibus venenatis est sit
+											amet facilisis. In vestibulum nisi at tellus egestas, in pharetra enim
+											fringilla. In ac erat non magna accumsan aliquam.</p>
+										</div>
 									</div>
 								</div>
 							</div>
-						</div>
 
 						</body>
 
